cmake_minimum_required(VERSION 3.0)

project(czmake)

if(${CMAKE_VERSION} VERSION_GREATER "3.9" OR ${CMAKE_VERSION} VERSION_EQUAL "3.9")
    cmake_policy(VERSION ${CMAKE_VERSION})
endif()

set(CZMAKE_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/czmake CACHE PATH "")
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    install(FILES czmake.cmake DESTINATION Modules)
    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/czmake DESTINATION Modules
        PATTERN CMakeLists.txt EXCLUDE
        PATTERN .svn EXCLUDE
        PATTERN .git EXCLUDE
        PATTERN __pycache__ EXCLUDE
        PATTERN *.pyc EXCLUDE)

    set(CPACK_PACKAGE_NAME "czmake")
    set(CPACK_PACKAGE_VERSION 0.5)
    set(CPACK_PACKAGE_RELEASE 1)
    set(CPACK_PACKAGE_CONTACT "Walter Oggioni")
    set(CPACK_PACKAGE_VENDOR "Comelz S.p.A.")
    set(CPACK_MONOLITHIC_INSTALL ON)
    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "czmake")
    set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
    set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_ROOT})
    set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")

    INCLUDE(CPack)
else()
    include(czmake.cmake)
endif()

